// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`menu/Option renders Menu and Options that are disabled 1`] = `
.emotion-12 {
  box-sizing: border-box;
  cursor: pointer;
  font-family: ArtifaktElement,sans-serif;
  list-style: none;
  margin: 0;
  outline: 0;
  padding: 8px 0;
  overflow-y: auto;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #3c3c3c;
  font-size: 14px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 18px;
  padding: 8px 12px;
  -webkit-transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  font-weight: 400;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 12px;
}

.emotion-1 > svg > * {
  opacity: 0;
  -webkit-transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
}

.emotion-0 {
  fill: #808080;
}

.emotion-0 > * {
  fill: #808080;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #3c3c3c;
  font-size: 14px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 18px;
  padding: 8px 12px;
  -webkit-transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  font-weight: 700;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 12px;
}

.emotion-5 > svg > * {
  opacity: 1;
  -webkit-transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  fill: #0696d7;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #3c3c3c;
  font-size: 14px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 18px;
  padding: 8px 12px;
  -webkit-transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  font-weight: 400;
  opacity: 0.4;
  cursor: not-allowed;
}

<ul
  className="emotion-12"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseMove={[Function]}
  role="listbox"
  tabIndex="0"
>
  <li
    aria-selected={false}
    className="emotion-3"
    disabled={true}
    id="option-1"
    multiple={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    role="option"
    selected={false}
  >
    <div
      className="emotion-1"
    >
      <svg
        className="emotion-0"
        height="16px"
        width="16px"
      >
        <path
          d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
        />
      </svg>
    </div>
    <div
      className="emotion-2"
    >
      Option 1
    </div>
  </li>
  <li
    aria-selected={true}
    className="emotion-7"
    id="option-2"
    multiple={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    role="option"
    selected={true}
  >
    <div
      className="emotion-5"
    >
      <svg
        className="emotion-0"
        height="16px"
        width="16px"
      >
        <path
          d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
        />
      </svg>
    </div>
    <div
      className="emotion-2"
    >
      Option 2
    </div>
  </li>
  <li
    aria-selected={false}
    className="emotion-11"
    id="option-3"
    multiple={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    role="option"
    selected={false}
  >
    <div
      className="emotion-1"
    >
      <svg
        className="emotion-0"
        height="16px"
        width="16px"
      >
        <path
          d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
        />
      </svg>
    </div>
    <div
      className="emotion-2"
    >
      Option 3
    </div>
  </li>
</ul>
`;

exports[`menu/Option renders Menu and Options with Avatars 1`] = `
.emotion-15 {
  box-sizing: border-box;
  cursor: pointer;
  font-family: ArtifaktElement,sans-serif;
  list-style: none;
  margin: 0;
  outline: 0;
  padding: 8px 0;
  overflow-y: auto;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #3c3c3c;
  font-size: 14px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 18px;
  padding: 8px 12px;
  -webkit-transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  font-weight: 400;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 12px;
  font-weight: 400;
}

.emotion-1 {
  background-color: #871616;
  color: #ffffff;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

.emotion-0 {
  width: 32px;
  height: 32px;
  font-family: ArtifaktElement,sans-serif;
}

.emotion-6 {
  background-color: #571698;
  color: #ffffff;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

.emotion-11 {
  background-color: #5b5bc2;
  color: #ffffff;
  width: 32px;
  height: 32px;
  line-height: 32px;
  font-size: 14px;
  display: block;
  position: relative;
  margin: 0;
  overflow: hidden;
  border-radius: 50%;
  text-align: center;
}

<ul
  className="emotion-15"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseMove={[Function]}
  role="listbox"
  tabIndex="0"
>
  <li
    aria-selected={false}
    className="emotion-4"
    id="option-1"
    multiple={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    role="option"
    selected={false}
  >
    <div
      className="emotion-2"
    >
      <span
        aria-label="Avatar for Cassandra Cain"
        className="emotion-1"
        role="img"
      >
        <span
          aria-hidden="true"
          className="emotion-0"
        >
          CC
        </span>
      </span>
    </div>
    <div
      className="emotion-3"
    >
      Option 1
    </div>
  </li>
  <li
    aria-selected={false}
    className="emotion-4"
    id="option-2"
    multiple={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    role="option"
    selected={false}
  >
    <div
      className="emotion-2"
    >
      <span
        aria-label="Avatar for Barbara Gordon"
        className="emotion-6"
        role="img"
      >
        <span
          aria-hidden="true"
          className="emotion-0"
        >
          BG
        </span>
      </span>
    </div>
    <div
      className="emotion-3"
    >
      Option 2
    </div>
  </li>
  <li
    aria-selected={false}
    className="emotion-4"
    id="option-3"
    multiple={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    role="option"
    selected={false}
  >
    <div
      className="emotion-2"
    >
      <span
        aria-label="Avatar for Stephanie Brown"
        className="emotion-11"
        role="img"
      >
        <span
          aria-hidden="true"
          className="emotion-0"
        >
          SB
        </span>
      </span>
    </div>
    <div
      className="emotion-3"
    >
      Option 3
    </div>
  </li>
</ul>
`;

exports[`menu/Option renders Menu and Options with Headers 1`] = `
.emotion-10 {
  box-sizing: border-box;
  cursor: pointer;
  font-family: ArtifaktElement,sans-serif;
  list-style: none;
  margin: 0;
  outline: 0;
  padding: 8px 0;
  overflow-y: auto;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #3c3c3c;
  font-size: 14px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 18px;
  padding: 8px 12px;
  -webkit-transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  font-weight: 400;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 12px;
}

.emotion-7 > svg > * {
  opacity: 0;
  -webkit-transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
}

.emotion-2 {
  fill: #808080;
}

.emotion-2 > * {
  fill: #808080;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: rgba(60,60,60,0.5);
  font-size: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 18px;
  padding: 0  12px 12px;
  -webkit-transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  font-weight: 700;
  opacity: 0.5;
  text-transform: uppercase;
  cursor: default;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #3c3c3c;
  font-size: 14px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 18px;
  padding: 8px 12px;
  -webkit-transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  font-weight: 700;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 12px;
}

.emotion-3 > svg > * {
  opacity: 1;
  -webkit-transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  fill: #0696d7;
}

<ul
  className="emotion-10"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseMove={[Function]}
  role="listbox"
  tabIndex="0"
>
  <li
    className="emotion-1"
    id="option-1"
    multiple={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    role="presentation"
    selected={false}
  >
    <div
      className="emotion-0"
    >
      Option 1
    </div>
  </li>
  <li
    aria-selected={true}
    className="emotion-5"
    id="option-2"
    multiple={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    role="option"
    selected={true}
  >
    <div
      className="emotion-3"
    >
      <svg
        className="emotion-2"
        height="16px"
        width="16px"
      >
        <path
          d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
        />
      </svg>
    </div>
    <div
      className="emotion-0"
    >
      Option 2
    </div>
  </li>
  <li
    aria-selected={false}
    className="emotion-9"
    id="option-3"
    multiple={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    role="option"
    selected={false}
  >
    <div
      className="emotion-7"
    >
      <svg
        className="emotion-2"
        height="16px"
        width="16px"
      >
        <path
          d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
        />
      </svg>
    </div>
    <div
      className="emotion-0"
    >
      Option 3
    </div>
  </li>
</ul>
`;

exports[`menu/Option renders Menu and Options with icons 1`] = `
.emotion-12 {
  box-sizing: border-box;
  cursor: pointer;
  font-family: ArtifaktElement,sans-serif;
  list-style: none;
  margin: 0;
  outline: 0;
  padding: 8px 0;
  overflow-y: auto;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #3c3c3c;
  font-size: 14px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 18px;
  padding: 8px 12px;
  -webkit-transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  font-weight: 400;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-0 {
  fill: #808080;
}

.emotion-0 > * {
  fill: #808080;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 12px;
  font-weight: 400;
}

<ul
  className="emotion-12"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseMove={[Function]}
  role="listbox"
  tabIndex="0"
>
  <li
    aria-selected={false}
    className="emotion-3"
    id="option-1"
    multiple={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    role="option"
    selected={false}
  >
    <div
      className="emotion-1"
    >
      <svg
        className="emotion-0"
        height="24px"
        width="24px"
      >
        <path
          d="M12 7.67A4.33 4.33 0 1016.33 12 4.34 4.34 0 0012 7.67zm0 7.66A3.33 3.33 0 1115.33 12 3.33 3.33 0 0112 15.33z"
        />
        <path
          d="M22 14v-4h-2.95a7.22 7.22 0 00-.65-1.57l2.09-2.09-2.83-2.83-2.09 2.09A7.22 7.22 0 0014 5V2h-4v3a7.22 7.22 0 00-1.57.65L6.34 3.51 3.51 6.34 5.6 8.43A7.22 7.22 0 005 10H2v4h3a7.22 7.22 0 00.65 1.57l-2.14 2.09 2.83 2.83 2.09-2.09a7.22 7.22 0 001.57.65V22h4v-2.95a7.22 7.22 0 001.57-.65l2.09 2.09 2.83-2.83-2.09-2.09a7.22 7.22 0 00.65-1.57zm-2.93 3.66l-1.41 1.41-1.91-1.91-.66.37a7.07 7.07 0 01-1.36.56l-.73.2V21h-2v-2.71l-.73-.2a7.07 7.07 0 01-1.36-.56l-.66-.37-1.91 1.91-1.41-1.41 1.91-1.92-.37-.66a6.73 6.73 0 01-.56-1.35l-.2-.73H3v-2h2.71l.2-.73a6.73 6.73 0 01.56-1.35l.37-.66-1.91-1.92 1.41-1.41 1.91 1.91.66-.37a7.07 7.07 0 011.36-.56l.73-.2V3h2v2.71l.73.2a7.07 7.07 0 011.36.56l.66.37 1.91-1.91 1.41 1.41-1.91 1.92.37.66a6.73 6.73 0 01.56 1.35l.2.73H21v2h-2.71l-.2.73a6.73 6.73 0 01-.56 1.35l-.37.66z"
        />
      </svg>
    </div>
    <div
      className="emotion-2"
    >
      Option 1
    </div>
  </li>
  <li
    aria-selected={false}
    className="emotion-3"
    id="option-2"
    multiple={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    role="option"
    selected={false}
  >
    <div
      className="emotion-1"
    >
      <svg
        className="emotion-0"
        height="24px"
        width="24px"
      >
        <path
          d="M12 7.67A4.33 4.33 0 1016.33 12 4.34 4.34 0 0012 7.67zm0 7.66A3.33 3.33 0 1115.33 12 3.33 3.33 0 0112 15.33z"
        />
        <path
          d="M22 14v-4h-2.95a7.22 7.22 0 00-.65-1.57l2.09-2.09-2.83-2.83-2.09 2.09A7.22 7.22 0 0014 5V2h-4v3a7.22 7.22 0 00-1.57.65L6.34 3.51 3.51 6.34 5.6 8.43A7.22 7.22 0 005 10H2v4h3a7.22 7.22 0 00.65 1.57l-2.14 2.09 2.83 2.83 2.09-2.09a7.22 7.22 0 001.57.65V22h4v-2.95a7.22 7.22 0 001.57-.65l2.09 2.09 2.83-2.83-2.09-2.09a7.22 7.22 0 00.65-1.57zm-2.93 3.66l-1.41 1.41-1.91-1.91-.66.37a7.07 7.07 0 01-1.36.56l-.73.2V21h-2v-2.71l-.73-.2a7.07 7.07 0 01-1.36-.56l-.66-.37-1.91 1.91-1.41-1.41 1.91-1.92-.37-.66a6.73 6.73 0 01-.56-1.35l-.2-.73H3v-2h2.71l.2-.73a6.73 6.73 0 01.56-1.35l.37-.66-1.91-1.92 1.41-1.41 1.91 1.91.66-.37a7.07 7.07 0 011.36-.56l.73-.2V3h2v2.71l.73.2a7.07 7.07 0 011.36.56l.66.37 1.91-1.91 1.41 1.41-1.91 1.92.37.66a6.73 6.73 0 01.56 1.35l.2.73H21v2h-2.71l-.2.73a6.73 6.73 0 01-.56 1.35l-.37.66z"
        />
      </svg>
    </div>
    <div
      className="emotion-2"
    >
      Option 2
    </div>
  </li>
  <li
    aria-selected={false}
    className="emotion-3"
    id="option-3"
    multiple={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    role="option"
    selected={false}
  >
    <div
      className="emotion-1"
    >
      <svg
        className="emotion-0"
        height="24px"
        width="24px"
      >
        <path
          d="M12 7.67A4.33 4.33 0 1016.33 12 4.34 4.34 0 0012 7.67zm0 7.66A3.33 3.33 0 1115.33 12 3.33 3.33 0 0112 15.33z"
        />
        <path
          d="M22 14v-4h-2.95a7.22 7.22 0 00-.65-1.57l2.09-2.09-2.83-2.83-2.09 2.09A7.22 7.22 0 0014 5V2h-4v3a7.22 7.22 0 00-1.57.65L6.34 3.51 3.51 6.34 5.6 8.43A7.22 7.22 0 005 10H2v4h3a7.22 7.22 0 00.65 1.57l-2.14 2.09 2.83 2.83 2.09-2.09a7.22 7.22 0 001.57.65V22h4v-2.95a7.22 7.22 0 001.57-.65l2.09 2.09 2.83-2.83-2.09-2.09a7.22 7.22 0 00.65-1.57zm-2.93 3.66l-1.41 1.41-1.91-1.91-.66.37a7.07 7.07 0 01-1.36.56l-.73.2V21h-2v-2.71l-.73-.2a7.07 7.07 0 01-1.36-.56l-.66-.37-1.91 1.91-1.41-1.41 1.91-1.92-.37-.66a6.73 6.73 0 01-.56-1.35l-.2-.73H3v-2h2.71l.2-.73a6.73 6.73 0 01.56-1.35l.37-.66-1.91-1.92 1.41-1.41 1.91 1.91.66-.37a7.07 7.07 0 011.36-.56l.73-.2V3h2v2.71l.73.2a7.07 7.07 0 011.36.56l.66.37 1.91-1.91 1.41 1.41-1.91 1.92.37.66a6.73 6.73 0 01.56 1.35l.2.73H21v2h-2.71l-.2.73a6.73 6.73 0 01-.56 1.35l-.37.66z"
        />
      </svg>
    </div>
    <div
      className="emotion-2"
    >
      Option 3
    </div>
  </li>
</ul>
`;

exports[`menu/Option renders Menu and Options with shortcuts 1`] = `
.emotion-9 {
  box-sizing: border-box;
  cursor: pointer;
  font-family: ArtifaktElement,sans-serif;
  list-style: none;
  margin: 0;
  outline: 0;
  padding: 8px 0;
  overflow-y: auto;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #3c3c3c;
  font-size: 14px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 18px;
  padding: 8px 12px;
  -webkit-transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  font-weight: 400;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-0 {
  color: rgba(60,60,60,0.7);
  font-size: 12px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-weight: 400;
  margin-left: auto;
}

<ul
  className="emotion-9"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseMove={[Function]}
  role="listbox"
  tabIndex="0"
>
  <li
    aria-selected={false}
    className="emotion-2"
    id="option-1"
    multiple={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    role="option"
    selected={false}
  >
    <div
      className="emotion-1"
    >
      Option 1
      <span
        className="emotion-0"
      >
        <span>
          ⌘ 6
        </span>
      </span>
    </div>
  </li>
  <li
    aria-selected={false}
    className="emotion-2"
    id="option-2"
    multiple={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    role="option"
    selected={false}
  >
    <div
      className="emotion-1"
    >
      Option 2
      <span
        className="emotion-0"
      >
        <span>
          ⌘ 7
        </span>
      </span>
    </div>
  </li>
  <li
    aria-selected={false}
    className="emotion-2"
    id="option-3"
    multiple={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    role="option"
    selected={false}
  >
    <div
      className="emotion-1"
    >
      Option 3
      <span
        className="emotion-0"
      >
        <span>
          ⌘ 8
        </span>
      </span>
    </div>
  </li>
</ul>
`;

exports[`menu/Option renders checkmark indicator Menu and Options 1`] = `
.emotion-12 {
  box-sizing: border-box;
  cursor: pointer;
  font-family: ArtifaktElement,sans-serif;
  list-style: none;
  margin: 0;
  outline: 0;
  padding: 8px 0;
  overflow-y: auto;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #3c3c3c;
  font-size: 14px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 18px;
  padding: 8px 12px;
  -webkit-transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  font-weight: 400;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  height: 18px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 12px;
}

.emotion-1 > svg > * {
  opacity: 0;
  -webkit-transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: opacity 0.3s cubic-bezier(0.4,0,0.2,1);
}

.emotion-0 {
  fill: #808080;
}

.emotion-0 > * {
  fill: #808080;
}

<ul
  className="emotion-12"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseMove={[Function]}
  role="listbox"
  tabIndex="0"
>
  <li
    aria-selected={false}
    className="emotion-3"
    id="option-1"
    multiple={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    role="option"
    selected={false}
  >
    <div
      className="emotion-1"
    >
      <svg
        className="emotion-0"
        height="16px"
        width="16px"
      >
        <path
          d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
        />
      </svg>
    </div>
    <div
      className="emotion-2"
    >
      Option 1
    </div>
  </li>
  <li
    aria-selected={false}
    className="emotion-3"
    id="option-2"
    multiple={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    role="option"
    selected={false}
  >
    <div
      className="emotion-1"
    >
      <svg
        className="emotion-0"
        height="16px"
        width="16px"
      >
        <path
          d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
        />
      </svg>
    </div>
    <div
      className="emotion-2"
    >
      Option 2
    </div>
  </li>
  <li
    aria-selected={false}
    className="emotion-3"
    id="option-3"
    multiple={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    role="option"
    selected={false}
  >
    <div
      className="emotion-1"
    >
      <svg
        className="emotion-0"
        height="16px"
        width="16px"
      >
        <path
          d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3 6.2 12z"
        />
      </svg>
    </div>
    <div
      className="emotion-2"
    >
      Option 3
    </div>
  </li>
</ul>
`;

exports[`menu/Option renders default Menu and Options 1`] = `
.emotion-6 {
  box-sizing: border-box;
  cursor: pointer;
  font-family: ArtifaktElement,sans-serif;
  list-style: none;
  margin: 0;
  outline: 0;
  padding: 8px 0;
  overflow-y: auto;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #3c3c3c;
  font-size: 14px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 18px;
  padding: 8px 12px;
  -webkit-transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  transition: background-color 0.3s cubic-bezier(0.4,0,0.2,1);
  font-weight: 400;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

<ul
  className="emotion-6"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseMove={[Function]}
  role="listbox"
  tabIndex="0"
>
  <li
    aria-selected={false}
    className="emotion-1"
    id="option-1"
    multiple={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    role="option"
    selected={false}
  >
    <div
      className="emotion-0"
    >
      Option 1
    </div>
  </li>
  <li
    aria-selected={false}
    className="emotion-1"
    id="option-2"
    multiple={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    role="option"
    selected={false}
  >
    <div
      className="emotion-0"
    >
      Option 2
    </div>
  </li>
  <li
    aria-selected={false}
    className="emotion-1"
    id="option-3"
    multiple={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    role="option"
    selected={false}
  >
    <div
      className="emotion-0"
    >
      Option 3
    </div>
  </li>
</ul>
`;
